Add person modal

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,11 @@
       crossorigin="anonymous"
     />
 
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <title>Split App</title>
   </head>
   <body>
